# virtual-kushtia

./: .clang-format  .stylelintrc.json  CMakeLists.txt  CMakePresets.json  Cargo.toml  open.sh  run.sh  web
.github/workflows/: ci.yaml
data/: token.json
script/: monitor_web.sh  test.sh
src/: gmail.rs  main.cpp  main.cxx  main.rs  main.rs.old  phc.hpp  session.rs  test.cxx
src/google/: gmail.rs
static/css/: dashboard.css  heritage.css  login.css
templates/: dashboard.html
test/: cache.cpp  parse.cpp
web/: 404.html  heritage.html  history.html  invalid.html  login.html  page.html  place.html  pride.html
