[package]
name = "virtual-kushtia"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
reqwest = {version="0.12.15", features=["json"]}
tokio = {version="1.44.1", features=["full"]}
#tower = {version = "0.5.2", features=["util"]}
tower-http = {version = "0.6.2", features=["fs"]}
serde = {version="1.0.219", features=["derive"]}
serde_json = "1.0.140"
base64 = "0.22.1"
oauth2 = "5.0.0"
